--- a/views/cuenta.ejs
+++ b/views/cuenta.ejs
@@ -11,7 +11,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="/usuarios">
                             <i><ion-icon name="id-card"></ion-icon></i>
                             <span>Usuarios</span>
                         </a>
