--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -1,69 +1,158 @@
 <% if(user==false){ %>
-<img src="/images/Error 404.png" alt="" width="100%">
-<% }else{ %>
+  <img src="/images/Error 404.png" alt="" width="100%">
+  <% }else{ %>
     <div class="comet">
-        <nav class="for-nav">
-            <ul class="list-group list-group-flush">
-                <li>
-                    <a href="/cuenta" class="log">
-                        <i class="men"><ion-icon name="grid"></ion-icon></i>
-                        <span>Administrar</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/usuarios">
-                        <i><ion-icon name="id-card"></ion-icon></i>
-                        <span>Usuarios</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i><ion-icon name="person-circle"></ion-icon></i>
-                        <span>Clientes</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i><ion-icon name="send"></ion-icon></i>
-                        <span>Pedidos</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="logout">
-                        <i><ion-icon name="log-out"></ion-icon></i>
-                        <span>Logout</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+      <nav class="for-nav">
+        <ul class="list-group list-group-flush">
+          <li>
+            <a href="/cuenta" class="log">
+              <i class="men"><ion-icon name="grid"></ion-icon></i>
+              <span>Administrar</span>
+            </a>
+          </li>
+          <li>
+            <a href="/usuarios">
+              <i><ion-icon name="id-card"></ion-icon></i>
+              <span>Usuarios</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i><ion-icon name="person-circle"></ion-icon></i>
+              <span>Clientes</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i><ion-icon name="send"></ion-icon></i>
+              <span>Pedidos</span>
+            </a>
+          </li>
+          <li>
+            <a href="" class="logout">
+              <i><ion-icon name="log-out"></ion-icon></i>
+              <span>Logout</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <table class="table">
+    <div class="container">
+      <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Correo</th>
+            <th scope="col">Usuario</th>
+            <th scope="col">Nivel</th>
+            <th scope="col">Estado</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Eliminar</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <% users.forEach((data)=> { %>
+            <tr>
+              <td>
+                <%= data.name %>
+              </td>
+              <td>
+                <%= data.lastname %>
+              </td>
+              <td>
+                <%= data.email %>
+              </td>
+              <td>
+                <%= data.user %>
+              </td>
+              <td>
+                <%= data.role %>
+              </td>
+              <td>
+                <%= data.status %>
+              </td>
+              <td>
+                <button type="button" class="btn btn-warning mb-3" data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop<%= data._id %>update">
+                  Actualizar
+                </button>
+                <div class="modal fade" id="staticBackdrop<%= data._id %>update" data-bs-backdrop="static"
+                  data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Actualizar Producto: <%= data.name %>
+                        </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form action="/update/users" method="post">
+                          <input type="text" value="<%= data._id %>" name="id" hidden>
+                          <div class="row">
+                            <div class="col-md-6">
+                              <label for="" class="form-label">Nombre:</label>
+                              <input type="text" class="form-control" name="product" value="<%= data.name %>" id=""
+                                required>
+                            </div>
+                            <div class="col-md-5">
+                              <label for="" class="form-label">Apellido</label>
+                              <div class="input-group input-group-col-md-3">
+                                <input type="text" class="form-control" id="" aria-describedby="addon-wrapping" required
+                                  name="price" value="<%= data.lastname %>">
+                              </div>
+                            </div>
+                          </div>
+                          <br>
+                          <div class="row">
+                            <div class="col-md-6">
+                              <label for="" class="form-label">Correo:</label>
+                              <input type="text" class="form-control" name="product" value="<%= data.email %>" id=""
+                                required>
+                            </div>
+                            <div class="col-md-5">
+                              <label for="" class="form-label">Usuario</label>
+                              <div class="input-group input-group-col-md-3">
+                                <input type="text" class="form-control" id="" aria-describedby="addon-wrapping" required
+                                  name="price" value="<%= data.user %>">
+                              </div>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-5">
+                              <label for="" class="form-label">Nivel</label>
+                              <select class="form-select" id="inputGroupSelect01" name="categorie" required>
+                                <option selected>
+                                  <%= data.role %>
+                                </option>
+                              </select>
+                            </div>
+                            <div class="col-md-6">
+                              <label for="" class="form-label">Estado</label>
+                              <select class="form-select" id="inputGroupSelect01" name="categorie" required>
+                                <option selected>
+                                  <%= data.status %>
+                                </option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button"
+                                class="btn btn-secondary"
+                                data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit"
+                                class="btn btn-primary">Guardar</button>
+                        </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <%})%>
         </tbody>
       </table>
+    </div>
+
     <% } %>
