--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -137,13 +137,34 @@
                             </div>
                           </div>
                           <div class="modal-footer">
-                            <button type="button"
-                                class="btn btn-secondary"
-                                data-bs-dismiss="modal">Cancelar</button>
-                            <button type="submit"
-                                class="btn btn-primary">Guardar</button>
-                        </div>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                          </div>
                         </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </td>
+              <td>
+                <button type="button" class="btn btn-danger mb-3" data-bs-toggle="modal"
+                  data-bs-target="#staticBackdrop<%= data._id %>delete">
+                  Eliminar
+                </button>
+                <div class="modal fade" id="staticBackdrop<%= data._id %>delete" data-bs-backdrop="static"
+                  data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        ¿Esta seguro que desea eliminar el producto?
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-primary"><a href="/delete/users/<%= data._id %>"
+                            class="text-light text-decoration-none">Aceptar</a>
+                        </button>
                       </div>
                     </div>
                   </div>
