--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -82,24 +82,24 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Actualizar Producto: <%= data.name %>
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Actualizar: <%= data.name %>
                         </h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <form action="/update/users" method="post">
+                        <form action="/update/users/" method="post">
                           <input type="text" value="<%= data._id %>" name="id" hidden>
                           <div class="row">
                             <div class="col-md-6">
                               <label for="" class="form-label">Nombre:</label>
-                              <input type="text" class="form-control" name="product" value="<%= data.name %>" id=""
+                              <input type="text" class="form-control" name="name" value="<%= data.name %>" id=""
                                 required>
                             </div>
                             <div class="col-md-5">
                               <label for="" class="form-label">Apellido</label>
                               <div class="input-group input-group-col-md-3">
                                 <input type="text" class="form-control" id="" aria-describedby="addon-wrapping" required
-                                  name="price" value="<%= data.lastname %>">
+                                  name="lastname" value="<%= data.lastname %>">
                               </div>
                             </div>
                           </div>
@@ -107,21 +107,21 @@
                           <div class="row">
                             <div class="col-md-6">
                               <label for="" class="form-label">Correo:</label>
-                              <input type="text" class="form-control" name="product" value="<%= data.email %>" id=""
+                              <input type="text" class="form-control" name="email" value="<%= data.email %>" id=""
                                 required>
                             </div>
                             <div class="col-md-5">
                               <label for="" class="form-label">Usuario</label>
                               <div class="input-group input-group-col-md-3">
                                 <input type="text" class="form-control" id="" aria-describedby="addon-wrapping" required
-                                  name="price" value="<%= data.user %>">
+                                  name="user" value="<%= data.user %>">
                               </div>
                             </div>
                           </div>
                           <div class="row">
                             <div class="col-md-5">
                               <label for="" class="form-label">Nivel</label>
-                              <select class="form-select" id="inputGroupSelect01" name="categorie" required>
+                              <select class="form-select" id="inputGroupSelect01" name="role" required>
                                 <option selected>
                                   <%= data.role %>
                                 </option>
@@ -129,7 +129,7 @@
                             </div>
                             <div class="col-md-6">
                               <label for="" class="form-label">Estado</label>
-                              <select class="form-select" id="inputGroupSelect01" name="categorie" required>
+                              <select class="form-select" id="inputGroupSelect01" name="status" required>
                                 <option selected>
                                   <%= data.status %>
                                 </option>
