formulario crear usuario

--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -24,7 +24,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Login</button>
                     <div class="login-register">
-                        <p class="text-light">¿No tienes una cuenta? <a href="../public/cuenta.html"
+                        <p class="text-light">¿No tienes una cuenta? <a href="/account"
                                 class="register-link text-light">Registrarme</a></p>
                     </div>
                 </form>
