--- a/views/carrito.ejs
+++ b/views/carrito.ejs
@@ -1,5 +1,5 @@
 <% if(user==false ){ %>
-    <img src="/images/Error 404.png" alt="">
+    <%- include('include/error') %>
 <% }else { %>
     <div class="container">
         <div class="row my-3">
