--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -272,7 +272,7 @@
 											</div>
 											<div class="modal-footer">
 												<button type="button" class="btn btn-primary">
-													<a href="/delete/users/<%= data._id %>"
+													<a href="/delete/users/<%= data.user %>"
 														class="text-light text-decoration-none">Aceptar</a>
 												</button>
 											</div>
