se añadio vista al baneado

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
             <%- body %>
             <%- include('include/footer') %>
         <% } else { %>
-            <%- include('include/error') %>
+            <%- include('include/error401') %>
         <% } %>
     <% } else {%>
         <%- include('include/nav') %>
