--- a/views/dashboard/categorias.html
+++ b/views/dashboard/categorias.html
@@ -112,11 +112,88 @@
                         </div>
                     </form>
                 </div>
-                <!--Botón de añadir que abre un modal para crear usuario-->
-                <div class="col-md-3">
-                    <button class="border-0 " onclick="openCreate()"><img
-                            src="https://img.icons8.com/ios-glyphs/40/null/add--v1.png" /></button>
+                <!--Botón de añadir que abre un modal para crear categoría-->
+
+                <div class="agregar-btn col-md-3">
+                    <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="icon icon-tabler icon-tabler-square-rounded-plus-filled" width="40" height="40"
+                            viewBox="0 0 24 24" stroke-width="1.5" stroke="#597e8d" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path
+                                d="M12 2l.324 .001l.318 .004l.616 .017l.299 .013l.579 .034l.553 .046c4.785 .464 6.732 2.411 7.196 7.196l.046 .553l.034 .579c.005 .098 .01 .198 .013 .299l.017 .616l.005 .642l-.005 .642l-.017 .616l-.013 .299l-.034 .579l-.046 .553c-.464 4.785 -2.411 6.732 -7.196 7.196l-.553 .046l-.579 .034c-.098 .005 -.198 .01 -.299 .013l-.616 .017l-.642 .005l-.642 -.005l-.616 -.017l-.299 -.013l-.579 -.034l-.553 -.046c-4.785 -.464 -6.732 -2.411 -7.196 -7.196l-.046 -.553l-.034 -.579a28.058 28.058 0 0 1 -.013 -.299l-.017 -.616c-.003 -.21 -.005 -.424 -.005 -.642l.001 -.324l.004 -.318l.017 -.616l.013 -.299l.034 -.579l.046 -.553c.464 -4.785 2.411 -6.732 7.196 -7.196l.553 -.046l.579 -.034c.098 -.005 .198 -.01 .299 -.013l.616 -.017c.21 -.003 .424 -.005 .642 -.005zm0 6a1 1 0 0 0 -1 1v2h-2l-.117 .007a1 1 0 0 0 .117 1.993h2v2l.007 .117a1 1 0 0 0 1.993 -.117v-2h2l.117 -.007a1 1 0 0 0 -.117 -1.993h-2v-2l-.007 -.117a1 1 0 0 0 -.993 -.883z"
+                                fill="currentColor" stroke-width="0" />
+                        </svg>
+                    </button>
                 </div>
+
+                <!-- Modar crear -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                    tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Crear categoría</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form action="">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <label for="" class="form-label">Nombre de la
+                                                categoría</label>
+                                            <input type="text" class="form-control" id="" required>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label for="" class="form-label">Estado</label>
+                                        <div class="input-group col-mb-3">
+                                            <select class="form-select" id="inputGroupSelect01" required>
+                                                <option selected disabled>Escoger...</option>
+                                                <option value="1">Inactivo</option>
+                                                <option value="2">Activo</option>
+                                            </select>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </form>
+                                <br>
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                      <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">categoría</th>
+                                        <th scope="col">Estado</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <th scope="row">1</th>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                      </tr>
+                                      <tr>
+                                        <th scope="row">2</th>
+                                        <td>Jacob</td>
+                                        <td>Thornton</td>
+                                      </tr>
+                                      <tr>
+                                        <th scope="row">3</th>
+                                        <td colspan="2">Larry the Bird</td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                                <button type="button" class="btn btn-success">Crear</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <!--Botón que crea reportes-->
                 <div class="col-md-4">
                     Reportes
