--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -100,10 +100,15 @@
             </div>
             <div class="col-3 mt-3">
                 <div>
-                    <h1 class="text-light mt-4">$nombre_producto</h1>
-                    <h2 class="text-light mt-4">$numero_referencia</h2>
-                    <h2 class="text-light mt-4">$precio</h2>
-                    <h2 class="text-light mt-4">$categoria</h2>
+                    <h1 class="text-light mt-4" id="producto">$nombre_producto</h1>
+                    <h5 class="text-light mt-4" id="precio">$precio</h5>
+                    <h5 class="text-light mt-4" id="categoria">$categoria</h5>
+                </div>
+                <div class="mt-3 colors-container" id="colorContainer">
+                    <div class="color-container">
+                        <h6>Color</h6>
+                        <input type="color" value="#FFFFFF">
+                    </div>
                 </div>
                 <div class="mt-3 btn-group" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
@@ -126,8 +131,7 @@
                     </ul>
                 </div>
                 <div class="mt-3">
-                    <button type="button" class="btn bg-primary text-light">Comprar</button>
-                    <button type="button" class="btn bg-secondary ms-3">Agregar al carrito</button>
+                    <button type="button" class="btn bg-primary text-light">Añadir al carrito</button>
                 </div>
             </div>
         </div>
