--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -99,40 +99,42 @@
                 </div>
             </div>
             <div class="col-3 mt-3">
-                <div>
-                    <h1 class="text-light mt-4" id="producto">$nombre_producto</h1>
-                    <h5 class="text-light mt-4" id="precio">$precio</h5>
-                    <h5 class="text-light mt-4" id="categoria">$categoria</h5>
-                </div>
-                <div class="mt-3 colors-container" id="colorContainer">
-                    <div class="color-container">
-                        <h6>Color</h6>
-                        <input type="color" value="#FFFFFF">
+                <form method="post" enctype="multipart/form-data">
+                    <div>
+                        <h1 class="text-light mt-4" id="producto">$nombre_producto</h1>
+                        <h5 class="text-light mt-4" id="precio">$precio</h5>
+                        <h5 class="text-light mt-4" id="categoria">$categoria</h5>
                     </div>
-                </div>
-                <div class="mt-3 btn-group" role="group" aria-label="Basic radio toggle button group">
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                    <label class="btn btn-outline-secondary" for="btnradio1">S</label>
+                    <div class="mt-3 colors-container" id="colorContainer">
+                        <div class="color-container">
+                            <h6>Color</h6>
+                            <input type="color" value="#FFFFFF">
+                        </div>
+                    </div>
+                    <div class="mt-3 btn-group" role="group" aria-label="Basic radio toggle button group">
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <label class="btn btn-outline-secondary" for="btnradio1">S</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                    <label class="btn btn-outline-secondary" for="btnradio2">M</label>
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio2">M</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                    <label class="btn btn-outline-secondary" for="btnradio3">L</label>
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio3">L</label>
 
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                    <label class="btn btn-outline-secondary" for="btnradio4">XL</label>
-                </div>
-                <div class="mt-3">
-                    <ul class="pagination">
-                        <li class="page-item disabled"><a class="page-link" href="#">-</a></li>
-                        <li class="page-item disabled"><a class="page-link" href="#">0</a></li>
-                        <li class="page-item disabled"><a class="page-link" href="#">+</a></li>
-                    </ul>
-                </div>
-                <div class="mt-3">
-                    <button type="button" class="btn bg-primary text-light">Añadir al carrito</button>
-                </div>
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btnradio4">XL</label>
+                    </div>
+                    <div class="mt-3">
+                        <ul class="pagination">
+                            <li class="page-item disabled"><a class="page-link" href="#">-</a></li>
+                            <li class="page-item disabled"><a class="page-link" href="#">0</a></li>
+                            <li class="page-item disabled"><a class="page-link" href="#">+</a></li>
+                        </ul>
+                    </div>
+                    <div class="mt-3">
+                        <button type="button" class="btn bg-primary text-light">Añadir al carrito</button>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="col-10 ms-4 mt-5">
