--- a/views/public/producto2.html
+++ b/views/public/producto2.html
@@ -132,7 +132,7 @@
                         </ul>
                     </div>
                     <div class="mt-3">
-                        <button type="button" class="btn bg-primary text-light">Añadir al carrito</button>
+                        <button type="button" class="btn bg-primary text-light" hidden>Añadir al carrito</button>
                     </div>
                 </form>
             </div>
