--- a/resources/css/public2.css
+++ b/resources/css/public2.css
@@ -5,7 +5,7 @@
     --text: #ffffff;
     --dark-blue: #061e46;
     --bg-primary: #be4a7f;
-    --bg-secondary: #2d2e2f;
+    --bg-secondary: #ffffff;
 }
 
 .bg-dark {
