--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -1,4 +1,4 @@
-<button class="btnLogin-popup" id="btn-login">Login</button>
+<button class="btnLogin-popup d-flex align-items-center" id="btn-login"><img class="mx-1" width="20" height="20" src="https://img.icons8.com/ios/20/enter-2.png" alt="enter-2"/> Iniciar Sesion</button>
 <div class="overlay">
     <div class="popup">
         <div class="wrapper">
