modificacion del nav

--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -16,6 +16,11 @@
     background-color: var(--bg-primary) !important;
 }
 
+.btn-primary {
+    background-color: var(--bg-primary) !important;
+    border-color: var(--bg-primary) !important;
+}
+
 .bg-secondary {
     background-color: var(--bg-secondary) !important;
     border-color: var(--bg-secondary) !important;
@@ -511,7 +516,7 @@ a {
 canvas {
     width: 500px;
     height: 60vh;
-    background-image: url(https://media.vogue.co.uk/photos/6454efc3ad4b7de8bf02445b/master/w_1280%2Cc_limit/sunspel-White-Mid-Sleeve-T-shirt.png);
+    background-image: url('https://media.vogue.co.uk/photos/6454efc3ad4b7de8bf02445b/master/w_1280%2Cc_limit/sunspel-White-Mid-Sleeve-T-shirt.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
