--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -5,9 +5,8 @@
                 <nav class="row d-flex flex-row navegation justify-content-between">
                     <div class="col-2 d-flex flex-row">
                         <a href="/" class="fs-6">Inicio</a>
-                        <a href="/products" class="fs-6">Productos</a>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2  d-flex justify-content-end">
                         <% if(user == false ) { %>
                             <%- include('login') %>
                         <% } else { %>
@@ -15,7 +14,6 @@
                                 <a href="/logOut/users"> <%= user.user %> </a>
                                 <a href="/cuenta">Cuenta</a>
                             <% } else { %>
-                                <a href="/carrito">Carrito</a>
                                 <a href="/logOut/users"> <%= user.user %> </a>
                             <% } %>
                         <% } %>
@@ -25,3 +23,36 @@
         </div>
     </div>
 </div>             
+<% if(user != false ) { %>
+    <% if(user.role == 'admin'){ %>
+        <a href="/logOut/users"> <%= user.user %> </a>
+        <a href="/cuenta">Cuenta</a>
+    <% } else { %>
+        <div class="container py-2">
+            <div class="row py-3 d-flex justify-content-between">       
+                <div class="col">
+                    <nav class="navbar">
+                        <div class="container">
+                            <button class="navbar-toggler d-flex flex-row align-items-center border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                                <p class="fs-5 mx-2 mb-1">Comprar</p>
+                            </button>
+                        </div>
+                    </nav>    
+                </div>   
+                <div class="col d-flex justify-content-end align-items-center">
+                    <input class="form-control w-50 mx-3" list="datalistOptions" id="exampleDataList" placeholder="buscar..." type="text" name="busqueda">
+                    <datalist id="datalistOptions">
+                        <option value="Camisas">
+                    </datalist>
+                    <img width="50" height="50" src="https://img.icons8.com/windows/50/737373/shopping-cart.png" alt="shopping-cart"/>
+                </div>
+            </div>
+        </div>
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="container-fluid mx-3 bg-dark p-4 border-top">
+                <span class="text-muted">Toggleable via the navbar brand.</span>
+            </div>
+        </div>
+    <% } %>
+<% } %>
