--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -4,29 +4,29 @@
         <div class="d-flex flex-row justify-content-around" id="footer-content">
             <div class="py-3">
                 <p class="fs-4 fw-bold">Sublisivarte</p>
-                <p class="fs-6 text-light">Tendencias</p>
-                <p class="fs-6 text-light">Productos</p>
-                <p class="fs-6 text-light">¿Quienes Somos?</p>
+                <p class="fs-6 ">Tendencias</p>
+                <p class="fs-6 ">Productos</p>
+                <p class="fs-6 ">¿Quienes Somos?</p>
             </div>
             <div class="py-3">
                 <p class="fs-4 fw-bold">Tienda</p>
-                <p class="fs-6 text-light">Terminos y condiciones</p>
-                <p class="fs-6 text-light">Politica de Privacidad</p>
+                <p class="fs-6 ">Terminos y condiciones</p>
+                <p class="fs-6 ">Politica de Privacidad</p>
             </div>
             <div class="py-3">
                 <p class="fs-4 fw-bold">Ayuda</p>
-                <p class="fs-6 text-light">Preguntas frecuentes</p>
-                <p class="fs-6 text-light">Diseñador de camisetas</p>
+                <p class="fs-6 ">Preguntas frecuentes</p>
+                <p class="fs-6 ">Diseñador de camisetas</p>
             </div>
             <div class="py-3">
                 <p class="fs-4 fw-bold">Contactanos</p>
-                <p class="fs-6 text-light">Facebook</p>
-                <p class="fs-6 text-light">Instagram</p>
-                <p class="fs-6 text-light">Correo</p>
+                <p class="fs-6 ">Facebook</p>
+                <p class="fs-6 ">Instagram</p>
+                <p class="fs-6 ">Correo</p>
             </div>
         </div>
         <div>
-            <p class="fs-5 fw-bold text-light text-center pt-3">© Copyright 2023-2023 Sublisivarte. Todos los Derechos
+            <p class="fs-5 fw-bold  text-center pt-3">© Copyright 2023-2023 Sublisivarte. Todos los Derechos
                 Reservados - Instituto Tecnico Ricaldone</p>
         </div>
     </footer>
