--- a/resources/css/public.css
+++ b/resources/css/public.css
@@ -4,7 +4,7 @@
     --bg-dark: #ffffff;
     --text: #000000;
     --dark-blue: #ffffff;
-    --bg-primary: #ffc4cc;
+    --bg-primary: #ffc107;
     --bg-secondary: #2d2e2f;
 }
 
@@ -19,12 +19,12 @@
 .btn-primary {
     background-color: var(--bg-primary) !important;
     border-color: var(--bg-primary) !important;
+    color: var(--text) !important;
 }
 
 .bg-secondary {
     background-color: var(--bg-secondary) !important;
     border-color: var(--bg-secondary) !important;
-    color: var(--text) !important;
 }
 
 * {
@@ -532,3 +532,30 @@ canvas .active {
     background-size: cover;
     position: relative;
 }
+
+.progress-circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #e9ecef;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .progress-circle:before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+  }
+  
+  .progress-circle .progress-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #007bff;
+    border-radius: 50%;
+    transform-origin: center center;
+    transition: transform 0.6s ease;
+  }
