--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -45,7 +45,7 @@
                     <datalist id="datalistOptions">
                         <option value="Camisas">
                     </datalist>
-                    <img width="50" height="50" src="https://img.icons8.com/windows/50/737373/shopping-cart.png" alt="shopping-cart"/>
+                    <a href="/carrito"><img width="50" height="50" src="https://img.icons8.com/windows/50/737373/shopping-cart.png" alt="shopping-cart"/></a>
                 </div>
             </div>
         </div>
