--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,12 +70,12 @@
                                 </div>
                             </div>
                             <div class="col-2">
-                                <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
+                                <div class="card text-center bg-dark border border-0" style="width: 13rem;">
                                     <img src="/images/ropa.jpg" class="card-img-top rounded" alt="...">
                                     <div class="card-body d-grid gap-2">
                                         <h5 class="card-title">bolsa</h5>
                                         <p class="card-text"></p>
-                                        <a href="#" class="btn btn-primary rounded">Ver mas...</a>
+                                        <a href="#" class="btn btn-primary rounded tex">Ver mas...</a>
                                     </div>
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                                 </div>
                             </div>
                             <div class="col-2 d-md-none">
-                                <div class="card text-center bg-dark text-light border border-0" style="width: 13rem;">
+                                <div class="card text-center bg-dark border border-0" style="width: 13rem;">
                                     <img src="/images/frame.jpg" class="card-img-top rounded" alt="...">
                                     <div class="card-body d-grid gap-2">
                                         <h5 class="card-title">frame</h5>
