se añadieron cambios a categorias

--- a/views/administracion.ejs
+++ b/views/administracion.ejs
@@ -43,7 +43,7 @@
                     <blockquote class="blockquote mb-0 d-flex align-items-center flex-column">
                         <img width="100" height="100" class="" src="https://img.icons8.com/wired/100/categorize.png"
                             alt="categorize" />
-                        <button type="button" class="btn btn-warning mx-1 my-1 w-75"><a href="/usuarios" class="text-dark">Acceder</a></button>
+                        <button type="button" class="btn btn-warning mx-1 my-1 w-75"><a href="/categorias" class="text-dark">Acceder</a></button>
                     </blockquote>
                 </div>
             </div>
