cambios cuenta usuario

--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -69,6 +69,29 @@
 </div>
 <div class="collapse" id="navbarToggleExternalContent">
     <div class="container-fluid mx-3 bg-dark p-4 border-top">
-        <span class="text-muted">Toggleable via the navbar brand.</span>
+        <div class="row">
+            <div class="col-4 border-end d-flex justify-content-center">
+                Ofertas
+            </div>
+            <div class="col-4 border-end d-flex justify-content-around">
+                <ul class="list-group">
+                    <div class="row">
+                        <div class="col-6">
+                            <li class="list-group-item border-0"><a href="/productos/textil" class="text-dark">textil</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/superficies planas" class="text-dark">superficies planas</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/ceramica" class="text-dark">ceramica</a></li>
+                        </div>
+                        <div class="col-6">
+                            <li class="list-group-item border-0"><a href="/productos/aluminio" class="text-dark">aluminio</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/vidrio" class="text-dark">vidrio</a></li>
+                            <li class="list-group-item border-0"><a href="/productos/papeleriaw" class="text-dark">papeleria</a></li>
+                        </div>
+                    </div>
+                </ul>
+            </div>
+            <div class="col-4 border-end d-flex justify-content-start">
+                <a href="/productos" class="text-dark">Todos los productos</a>
+            </div>
+        </div>
     </div>
 </div>
