Botones para comentarios - Admin

--- a/views/public/producto.html
+++ b/views/public/producto.html
@@ -125,6 +125,13 @@
                         excepturi, ab debitis accusantium autem laborum minima quo ducimus reiciendis distinctio sunt
                         libero
                         iure dolore, ad tempore. Unde!</p>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-outline-danger" id="bor">Eliminar</button>
+                        <input type="checkbox" class="btn-check" id="btn-check-outlined" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btn-check-outlined">Estado</label>
+                    </div>
+                    <br>
+                    <br>
                 </div>
 
             </div>
@@ -137,6 +144,13 @@
                         excepturi, ab debitis accusantium autem laborum minima quo ducimus reiciendis distinctio sunt
                         libero
                         iure dolore, ad tempore. Unde!</p>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-outline-danger" id="bor">Eliminar</button>
+                        <input type="checkbox" class="btn-check" id="btn-check-outlined" autocomplete="off">
+                        <label class="btn btn-outline-secondary" for="btn-check-outlined">Estado</label>
+                    </div>
+                    <br>
+                    <br>
                 </div>
             </div>
         </div>
